5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1593_1803.log
== TEST (2019-03-21 20:15:05) 
-- CODE:
n = int(input("digite o numero: "))
x = n//1000
print(x)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:15:46) 
-- CODE:
n = int(input("digite o numero: "))
w = n//1000 x = n//100
print(w)
print(n)
-- ERROR:
File "XXXX", line 2
    w = n//1000 x = n//100
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:15:56) 
-- CODE:
n = int(input("digite o numero: "))
w = n//1000 x = n//100
print(w)
print(x)
-- ERROR:
File "XXXX", line 2
    w = n//1000 x = n//100
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:16:03) 
-- CODE:
n = int(input("digite o numero: "))
w = n//1000 
x = n//100
print(w)
print(x)
-- OUTPUT:
2
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:17:12) 
-- CODE:
n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - n%100
print(w)
print(x)
-- OUTPUT:
2
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:18:32) 
-- CODE:
n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
print(w)
print(x)
-- OUTPUT:
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:21:15) 
-- CODE:
n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - n//100
print(w)
print(x)
print(y)
-- OUTPUT:
2
0
180
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:22:26) 
-- CODE:
print(1538//10 - n//100*100)
n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - n//100
print(w)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(1538//10 - n//100*100)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:22:59) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*100
print(w)
print(x)
print(y)
-- OUTPUT:
2
0
-1800
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:23:36) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
print(w)
print(x)
print(y)
-- OUTPUT:
2
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:25:06) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = n - (n//1000)*10
print(w)
print(x)
print(y)
print(z)
-- OUTPUT:
2
0
0
1980
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:25:43) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = n//1 - (n//1000)*10
print(w)
print(x)
print(y)
print(z)
-- OUTPUT:
2
0
0
1980
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:26:05) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = (n//10)*10 - (n//1000)*10
print(w)
print(x)
print(y)
print(z)
-- OUTPUT:
2
0
0
1980
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:26:34) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = (n//10)*10 - (n//10)*10
print(w)
print(x)
print(y)
print(z)
-- OUTPUT:
2
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:26:52) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = (n//100)*10 - (n//10)*10
print(w)
print(x)
print(y)
print(z)
-- OUTPUT:
2
0
0
-1800
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:27:32) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = n - (n//10)*10
print(w)
print(x)
print(y)
print(z)
-- OUTPUT:
2
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:30:07) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = n - (n//10)*10

c1 = w*5
c2 = x*4
c3 = y*3
c4 = z*2
s = c1 + c2 + c3 + c4
r = s % 11
-- OUTPUT:
2
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:30:30) 
-- CODE:

n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = n - (n//10)*10

c1 = w*5
c2 = x*4
c3 = y*3
c4 = z*2
s = c1 + c2 + c3 + c4
r = s % 11
print(r)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:33:21) 
-- CODE:
n = int(input("digite o numero: "))
w = n//1000 
x = n//100 - w*10
y = n//10 - (n//100)*10
z = n - (n//10)*10

c1 = w*5
c2 = x*4
c3 = y*3
c4 = z*2
s = c1 + c2 + c3 + c4
r = s % 11
print(r)
-- EXECUTION TIME:
0.194537
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
